<?xml version="1.0"?>
<package format="2">
  <name>fastlio_mavros_bridge</name>
  <version>1.0.0</version>
  <description>Direct MAVLink bridge between FAST-LIO and ArduPilot (no MAVROS)</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/yourusername/fastlio_mavros_bridge</url>

  <author email="your@email.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <!-- Required for direct MAVLink communication -->
  <exec_depend>pymavlink</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>rostest</test_depend>
</package>
